--- a/config/config.json
+++ b/config/config.json
@@ -4,6 +4,6 @@
       "enabled": true
     }
   },
-  "sidenavTitle": "IGO",
-  "theme": "blue-theme"
+  "theme": "blue-theme",
+  "hasExpansionPanel": false
 }
