--- a/src/config/config.json
+++ b/src/config/config.json
@@ -4,7 +4,7 @@
       "enabled": true
     }
   },
-  "theme": "blue-theme",
+  "theme": "noel-theme",
   "hasExpansionPanel": true,
   "hasSearchPointerSummary": false,
   "hasGeolocateButton": true,
