--- a/package.json
+++ b/package.json
@@ -63,7 +63,10 @@
     "@igo2/utils": "~1.8.1",
     "@mat-datetimepicker/core": "^5.1.2",
     "@ngbmodule/material-carousel": "^0.7.1",
+    "@turf/area": "^6.5.0",
+    "@turf/boolean-point-in-polygon": "^6.5.0",
     "@turf/buffer": "^5.1.5",
+    "@turf/intersect": "^6.5.0",
     "@turf/point-on-feature": "^5.1.5",
     "angular-shepherd": "^0.7.0",
     "bowser": "^2.9.0",
