--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --host 0.0.0.0 --port 4201 --proxy-config proxy.conf.json",
-    "start-pwa": "ng build --prod && http-server -p 4201 -c-1 dist/igo2",
+    "start-pwa": "ng build --prod && http-server -p 4202 -c-1 dist/igo2",
     "build": "ng build",
     "lint": "ng lint",
     "e2e": "ng e2e --port 4300",
@@ -36,8 +36,7 @@
     "preghpages": "npm run build -- --configuration=github --output-path ./dist/ghpages --base-href /igo2/ && echo \"include: ['_default.json', '_contexts.json', '_base.json']\" > dist/ghpages/_config.yml",
     "ghpages": "VERSION=$(node -p -e \"require('./package.json').version\") && npx ngh --dir=dist/ghpages --no-silent=false --message=$VERSION",
     "postghpages": "rimraf ./dist/ghpages",
-    "ghrelease": "VERSION=$(node -p -e \"require('./package.json').version\") && publish-release --owner infra-geo-ouverte --repo igo2 --tag $VERSION --name $VERSION --reuse-release --notes \"$(npm run changelog-current -s)\" --assets dist/igo2.zip",
-    "start-pwa": "ng build --prod && http-server -p 4202 -c-1 dist/igo2"
+    "ghrelease": "VERSION=$(node -p -e \"require('./package.json').version\") && publish-release --owner infra-geo-ouverte --repo igo2 --tag $VERSION --name $VERSION --reuse-release --notes \"$(npm run changelog-current -s)\" --assets dist/igo2.zip"
   },
   "private": true,
   "dependencies": {
