created branch simpleFilters

--- a/src/config/config.json
+++ b/src/config/config.json
@@ -15,6 +15,12 @@
   "showRotationButtonIfNoRotation": false,
   "showMenuButton": false,
   "showSearchBar": false,
+  "simpleFilters": [
+    {"type": "regadmin", "description": "Région administrative"},
+    {"type": "mrc", "description": "MRC"},
+    {"type": "municipalites", "description": "Municipalité"},
+    {"type": "prenom_resp", "description": "Prénom"}
+  ],
   "simpleFeatureList": {
     "layerId": "dq2",
     "attributeOrder": [
