--- a/config/config.json
+++ b/config/config.json
@@ -9,7 +9,13 @@
       "url": "/services/itineraire/route/v1/driving/"
     }
   },
+  "favoriteContext4NonAuthenticated": true,
   "theme": "blue-theme",
+  "header": {
+    "hasHeader": false,
+    "logo": "assets/images/signature-PIV.svg",
+    "logoPrint": "assets/images/signature-PIV.svg"
+  },
   "hasExpansionPanel": true,
   "hasGeolocateButton": true,
   "showRotationButtonIfNoRotation": false,
@@ -34,6 +40,6 @@
     "nbVisitToShowAgain": 30
   },
   "edition": {
-    "url": "/apis/postgrest/"
+    "url": "/apis/inedit/"
   }
 }
