--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
   "license": "LiLiQ-R",
   "scripts": {
     "ng": "ng",
-    "start": "gulp watch:locale | ng serve --host 0.0.0.0 --port 4201 --proxy-config proxy.conf.json",
-    "build": "ng build",
+    "start": "npm run postinstall && gulp watch:locale | ng serve --host 0.0.0.0 --port 4201 --proxy-config proxy.conf.json",
+    "build": "npm run postinstall && ng build",
     "lint": "ng lint",
     "lint.fix": "ng lint --fix",
     "e2e": "ng e2e --port 4300",
     "postinstall": "ngcc --tsconfig src/tsconfig.app.json && gulp copyLocaleFromLib",
-    "build.prod": "ng build --configuration production",
+    "build.prod": "npm run postinstall && ng build --configuration production",
     "serve.prod": "http-server ./dist/igo2/ --port=4200 --no-browser",
     "doc": "compodoc -p src/tsconfig.app.json -s --port 4220",
     "build.doc": "compodoc -p src/tsconfig.app.json",
