--- a/package.json
+++ b/package.json
@@ -16,8 +16,6 @@
     "lint": "ng lint",
     "lint.fix": "ng lint --fix",
     "e2e": "ng e2e --port 4300",
-    "pwaBumpVersion.dev": "gulp bumpPwaVersionDev",
-    "pwaBumpVersion.prod": "gulp bumpPwaVersionProd",
     "postinstall": "ngcc --tsconfig src/tsconfig.app.json && gulp copyLocaleFromLib",
     "build.prod": "ng build --configuration production",
     "build.github": "ng build --configuration=github --output-path ./dist/ghpages --base-href /igo2/",
@@ -39,7 +37,7 @@
     "clean": "rimraf ./dist && rimraf ./node_modules && npm cache clean --force && git checkout -- package.json && git checkout -- package-lock.json",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
     "changelog-current": "conventional-changelog -p angular -r 2",
-    "preversion.linux": "npm run pwaBumpVersion.prod && npm run test.all && rimraf ./dist && npm run build.prod",
+    "preversion.linux": "npm run test.all && rimraf ./dist && npm run build.prod",
     "version.linux": "npm run changelog && git add -A CHANGELOG.md",
     "postversion.linux": "git push && git push --tags && npm run ghpages",
     "preversion": "npm run test.all && rimraf ./dist && npm run build.prod",
