--- a/src/config/config.json
+++ b/src/config/config.json
@@ -1,8 +1,4 @@
 {
-  "pwa": {
-    "promote": true,
-    "dataDownload": true
-  },
   "routingSources": {
     "osrm": {
       "enabled": true
@@ -36,11 +32,6 @@
   "saveSearchResultInLayer": true,
   "hasFeatureEmphasisOnSelection": true,
   "menuButtonReverseColor": false,
-  "kkhomeExtentButton": {
-    "homeExtButtonExtent":[-9000000, 5790000,-7500000, 6770000],
-    "homeExtButtonCenter": [-71.938087, 48.446975],
-    "homeExtButtonZoom" : 6
-  },
   "title": "IGO",
   "sidenavTitle": "SIGO - Terrain",
   "description": "L'application SIGO - Terrain en mode déconnecté",
@@ -52,6 +43,6 @@
   "edition": {
     "url": "/apis/inedit/"
   },
-  "wakeLockApiButton": false,
+  "wakeLockApiButton": true,
   "offlineButton": false
 }
