--- a/config/config.json
+++ b/config/config.json
@@ -1,9 +1,4 @@
 {
-  "routingSources": {
-    "osrm": {
-      "enabled": true
-    }
-  },
   "directionsSources": {
     "osrm": {
       "url": "/services/itineraire/route/v1/driving/"
@@ -25,6 +20,8 @@
     "showSearchBar": true,
     "showSearchButton": false
   },
+  "queryTabs": false,
+  "saveSearchResultInLayer": true,
   "hasFeatureEmphasisOnSelection": true,
   "menuButtonReverseColor": false,
   "homeExtentButton": {
@@ -40,5 +37,7 @@
   },
   "edition": {
     "url": "/apis/inedit/"
-  }
+  },
+  "wakeLockApiButton": false,
+  "offlineButton": false
 }
